tests/rosetta/out/Haskell/averages-mean-time-of-day.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/averages-mean-time-of-day.hs:155:1: error:
    Not in scope: data constructor ‘PI’
    |
155 | PI = 3.141592653589793
    | ^^

/workspace/mochi/tests/rosetta/out/Haskell/averages-mean-time-of-day.hs:158:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/averages-mean-time-of-day.hs:149:1
                 /workspace/mochi/tests/rosetta/out/Haskell/averages-mean-time-of-day.hs:158:1
    |
158 | main = do
    | ^^^^
